Wed Apr  2 20:26:58 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.cpp:
	  Disable intialization of the federation mechanisms if not
	  federation Id value is supplied.

        * dds/InfoRepo/DCPS_Utils.cpp:
	  Changed the sense of compatibility for PARTITION QoS policy
	  matching.

Wed Apr  2 15:25:42 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Corrected problems with SunCC and Visual C++.

Wed Apr  2 14:49:02 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.cpp:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.inl:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.cpp:
          Changed to require the ORB to be explicitly passed in during
          configuration.  This removes the use of a more modern
          mechanism for accessing the ORB from the servant.

Tue Apr  1 23:06:41 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/InfoRepo/Federator.idl:
        * dds/InfoRepo/FederatorManagerImpl.h:
        * dds/InfoRepo/FederatorManagerImpl.cpp:
        * dds/InfoRepo/FederatorManager_T_Impl.cpp:
        * dds/InfoRepo/FederatorRemoteLink.h:
        * dds/InfoRepo/FederatorRemoteLink.inl:
          Continued federation implementation.

Tue Apr  1 21:05:16 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
        Merging trunk changes 999:1046 out to branch.

        Mon Mar 31 18:12:38 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/CompatibilityTest/CompatibilityTest.mpc:
        * tests/DCPS/CompatibilityTest/common.h:
        * tests/DCPS/CompatibilityTest/publisher.cpp: